tests/fail/test-neg-missing-main.ctds

bool andFunction ( bool a, bool b){
	return a && b;
}

integer mainly(){
  	return 45;
}
